--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cointab SE-ASSIGNMENT</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cointab SE-ASSIGNMENT</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <h1>Cointab SE-ASSIGNMENT</h1>
-    </header>
-    <main>
-        <button id="allUsersBtn">All Users</button>
-        <div id="usersList"></div>
-    </main>
-    <script src="script.js"></script>
+  <h1>Cointab SE-ASSIGNMENT</h1>
+  <button id="allUsersBtn">All Users</button>
+  <div id="userContainer"></div>
+  <script src="./script.js"></script>
 </body>
 </html>
